Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26380

qt-creator: help plugin fails to build with qtwebengine-6.2.0

XMLWordPrintable

    • Linux/X11
    • b7853efaf3a3e2d6b6ae0c77ddd886934b1ba234 (qt-creator/qt-creator/6.0)

      When building qt-creator 5.0.2 with Qt 6.2.0, it fails to build help plugin with qtwebengine support enabled. qtwebengine 6.2.0 is installed.

      Error from build log:
      webenginehelpviewer.cpp:40:10: fatal error: QWebEngineContextMenuData: No such file or directory
      40 | #include <QWebEngineContextMenuData>

      ^~~~~~~~~~~~~~~~~~~~~~~~~~~
      compilation terminated.

        1. build.log.gz
          88 kB
          i.dark_templar
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            con Eike Ziller
            i.dark_templar i.dark_templar
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes