Re-enable QWebEngine help viewer backend for Qt 6.2

Fixes: QTCREATORBUG-26380
Change-Id: I8aa31bebd5a8a20f664a17bca2f657fcfac4b1f5
Reviewed-by: Tim Jenssen <tim.jenssen@qt.io>